# FruitManager

./: app.py  fruit_manager.py  notebook.ipynb  pyproject.toml  readme.md
data/: inventaire.json
