[project]
name = "fruitmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "PRuppé",email = "patrick.ruppe.53@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
